# mirscribe-lean

./: .gitignore  ASD.ipynb  README.md  invalid.txt  main.py  pyproject.toml  test.ipynb
data/mirna/: process_mirnas.ipynb
data/sample_vcfs/: sample.vcf
scripts/: config.py  pipeline.py  utils.py
scripts/pipeline_steps/: step1.py
scripts_old/: config.py  globals.py  pipeline.py
scripts_old/pipeline_steps/: step1.py  step2.py  step4.py
scripts_old/utils/: sequence_utils.py
