[tool.poetry]
name = "mirscribe-lean"
version = "0.1.0"
description = ""
authors = ["tasbasmn <nazifts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
memory-profiler = "^0.61.0"
numpy = "^2.2.2"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
